# shop-catalog-tools

./: .env.example  .gitignore  README.md  discover_and_process_catalogs.py  package-lock.json  process_shopagora_catalogs.sh  process_shopari_catalogs.sh  pyproject.toml  run_api_and_svelte_servers.sh  test_loading_types.sh
src/: backend.py  download_catalog_files.py  index_catalog.py  load_to_db.py  load_to_whoosh.py  octogen_catalog.py  process_catalog.py  read_structured_products.py  schema.json  schema.py  utils.py
src/app/: index.html  package-lock.json  package.json  svelte.config.js  vite.config.js  vite.config.js.timestamp-1736275075483-c2433f7be89c8.mjs
src/app/.svelte-kit/: ambient.d.ts  tsconfig.json
src/app/src/: App.svelte  app.html  global.css  main.js  utils.js
src/app/src/components/: AdditionalAttributes.svelte  AnalyticsCard.svelte  AppRouter.svelte  CatalogSelector.svelte  ColorPicker.svelte  ImageGallery.svelte  ImageSkeleton.svelte  InfiniteScroll.svelte  InteractiveDataView.svelte  Pagination.svelte  ProductCard.svelte  ProductCardSkeleton.svelte  ProductGrid.svelte  ProductOverview.svelte  RatingDisplay.svelte  ReviewList.svelte  SearchBar.svelte  SizePicker.svelte
src/app/src/lib/: utils.js
src/app/src/routes/: +page.svelte  Analytics.svelte  ProductList.svelte  Products.svelte
src/app/src/routes/[table]/: +page.svelte
src/app/src/routes/[table]/product/[id]/: +page.js  +page.svelte
src/app/src/styles/: product-viewer.css
src/app/src/utils/: price-utils.js
src/templates/: format_banner.html  product_view.html
(+1 files in other folders)
