[project]
name = "shop-catalog-tools"
version = "0.1.0"
description = "Tools to download and work with the Octogen shopping catalogs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncer>=0.0.8",
    "google-cloud-storage>=2.19.0",
    "python-dotenv>=1.0.1",
    "pandas>=2.1.1",
    "pyarrow>=14.0.1",
    "pydantic>=2.1.1",
    "tabulate>=0.9.0",
    "pyyaml>=6.0.2",
    "whoosh>=2.7.4",
    "uvicorn>=0.25.0",
    "fastapi>=0.100.0",
]

[dependency-groups]
dev = ["mypy>=1.14.1", "ruff>=0.8.5"]

[tool.mypy]
disallow_untyped_defs = true
show_error_codes = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
[[tool.mypy.overrides]]
module = ["google.cloud.*"]
ignore_missing_imports = true
